# FTA-Maze-ing

./: .gitignore  pyproject.toml
src/: __init__.py  a_maze_ing.py  config.txt  default_config.txt  main.py
src/classes/: __init__.py  cell.py  del_on_relise.py  graphics.py  grid.py  manager.py  maze_config.py  menu.py  renderer.py
